--- a/Arcanum.UI/Components/Styles/Specific/BorderlessComboBox.xaml
+++ b/Arcanum.UI/Components/Styles/Specific/BorderlessComboBox.xaml
@@ -121,19 +121,19 @@
                 <ControlTemplate TargetType = "ComboBox">
                     <Grid Background="Transparent">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                            <ColumnDefinition />
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="22"/>
                         </Grid.ColumnDefinitions>
                         <ToggleButton Name = "ToggleButton"
-                                      Grid.Column = "2"
+                                      Grid.Column = "1"
                                       ClickMode = "Press"
                                       Focusable = "False"
                                       IsChecked = "{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                       Template = "{StaticResource BorderlessComboBoxToggleButtonTemplate}" />
-
-                        <ContentPresenter Name = "ContentSite"
-                                          Margin = "5, 1, 23, 3"
+                        
+                        <ContentPresenter Grid.Column = "0"
+                                          Name = "ContentSite"
+                                          Margin = "5, 1, 3, 3"
                                           IsHitTestVisible = "False"
                                           HorizontalAlignment = "Left"
                                           VerticalAlignment = "Center"
@@ -141,8 +141,9 @@
                                           ContentTemplate = "{TemplateBinding ComboBox.SelectionBoxItemTemplate}"
                                           ContentTemplateSelector = "{TemplateBinding ItemTemplateSelector}">
                         </ContentPresenter>
-                        <TextBox Name = "PART_EditableTextBox"
-                                 Margin = "3, 3, 23, 3"
+                        
+                        <TextBox Grid.Column="0" Name = "PART_EditableTextBox"
+                                 Margin = "3, 3, 3, 3"
                                  IsReadOnly = "{TemplateBinding IsReadOnly}"
                                  Visibility = "Hidden"
                                  Background = "Transparent"
@@ -163,12 +164,12 @@
                             </TextBox.Template>
                         </TextBox>
                         <!-- Popup showing items -->
-                        <Popup Name = "Popup"
-                               Placement = "Bottom"
-                               Focusable = "False"
-                               AllowsTransparency = "True"
-                               IsOpen = "{TemplateBinding ComboBox.IsDropDownOpen}"
-                               PopupAnimation = "Slide">
+                        <Popup  Grid.Column="0" Name = "Popup"
+                                Placement = "Bottom"
+                                Focusable = "False"
+                                AllowsTransparency = "True"
+                                IsOpen = "{TemplateBinding ComboBox.IsDropDownOpen}"
+                                PopupAnimation = "Slide">
                             <Grid Name = "DropDown"
                                   SnapsToDevicePixels = "True"
                                   MinWidth = "{TemplateBinding FrameworkElement.ActualWidth}"
