--- a/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
@@ -13,6 +13,7 @@
         <converters:EnumValueConverter x:Key = "EnumValueConverter" />
         <converters:DecimalDoubleConverter x:Key = "DecimalDoubleConverter" />
         <converters:BoolToVisibilityConverter x:Key = "BoolToVisibilityConverter" />
+        <converters:TypeToStringConverter x:Key = "TypeToStringConverter" />
 
         <DataTemplate x:Key = "StringTemplate"
                       DataType = "{x:Type delayedEvents:PropertyItem}">
@@ -113,7 +114,8 @@
                     <ColumnDefinition Width = "20" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Text = "{Binding Type}"
+                <TextBlock Text = "{Binding Value, Converter={StaticResource TypeToStringConverter}}"
+                           TextSearch.TextPath="Value"
                            Margin = "2, 0, 0, 0"
                            VerticalAlignment = "Center"
                            HorizontalAlignment = "Left" />
