--- a/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -11,6 +11,14 @@
                          Width = "1200"
                          Background = "{StaticResource DefaultBackColorBrush}">
 
+    <styleClasses:BaseWindow.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source = "/Components/Styles/Specific/DataTemplate/DiagnosticTemplate.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </styleClasses:BaseWindow.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height = "30" />
@@ -18,18 +26,21 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width = "*" />
-            <ColumnDefinition Width = "300" />
+            <ColumnDefinition Width = "*"
+                              MinWidth = "300" />
+            <ColumnDefinition Width = "7" /> <!-- Spacer for a splitter-->
+            <ColumnDefinition Width = "300"
+                              MinWidth = "200" />
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Row = "0"
-              Grid.ColumnSpan = "2">
+              Grid.ColumnSpan = "3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width = "*" />
                 <ColumnDefinition Width = "*" />
                 <ColumnDefinition Width = "*" />
+                <ColumnDefinition Width = "400" />
                 <ColumnDefinition Width = "200" />
-                <ColumnDefinition Width = "100" />
             </Grid.ColumnDefinitions>
 
             <CheckBox Grid.Column = "0"
@@ -46,51 +57,106 @@
             </CheckBox>
 
             <userControls:SearchTextBox Grid.Column = "3"
-                                        x:Name = "SearchTextBox">
+                                        x:Name = "SearchTextBox"
+                                        BorderThickness = "0, 0, 0, 1">
 
             </userControls:SearchTextBox>
 
             <ComboBox Grid.Column = "4"
-                      x:Name = "FilterComboBox">
-
+                      x:Name = "FilterComboBox"
+                      Margin = "4">
             </ComboBox>
 
 
         </Grid>
-        
+
+
+        <GridSplitter Grid.Row = "1"
+                      Grid.Column = "1"
+                      Width = "3"
+                      Margin = "0, 4"
+                      HorizontalAlignment = "Center"
+                      VerticalAlignment = "Stretch"
+                      ResizeBehavior = "PreviousAndNext">
+
+        </GridSplitter>
+
         <!-- Second row -->
 
         <ListView Grid.Column = "0"
                   Grid.Row = "1"
                   x:Name = "ErrorLogListView"
-                  SelectionChanged="ErrorLogListView_OnSelectionChanged">
+                  SelectionChanged = "ErrorLogListView_OnSelectionChanged"
+                  Margin="4">
         </ListView>
 
-        <Grid Grid.Column = "1"
-              Grid.Row = "1"
-              Background = "{StaticResource LightBackColorBrush}">
-            <Grid.RowDefinitions>
-                <RowDefinition Height = "40" />
-                <RowDefinition Height = "300" />
-                <RowDefinition Height = "300" />
-                <RowDefinition Height = "*" />
-                <RowDefinition Height = "30" />
-            </Grid.RowDefinitions>
-            
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width = "40" />
-                    <ColumnDefinition Width = "*" />
-                </Grid.ColumnDefinitions>
-                
-                <Image Grid.Column = "0"
-                       Source = "/Assets/Icons/20x20/Error20x20.png"
-                       Width = "20"
-                       Height = "20"
-                       Margin = "10,0,0,0"
-                       VerticalAlignment = "Center" />
+        <Border Grid.Column = "2"
+                Grid.Row = "1"
+                Background = "{StaticResource LightBackColorBrush}"
+                CornerRadius = "6"
+                Margin="4">
+            <Grid Margin = "0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height = "40" />
+                    <RowDefinition Height = "200" />
+                    <RowDefinition Height = "200" />
+                    <RowDefinition Height = "*" />
+                    <RowDefinition Height = "30" />
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row = "0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width = "40" />
+                        <ColumnDefinition Width = "*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image Grid.Column = "0"
+                           Source = "/Assets/Icons/40x40/DangerCircle40x40.png"
+                           Width = "35"
+                           Height = "35"
+                           Margin = "0,0,0,0"
+                           VerticalAlignment = "Center"
+                           HorizontalAlignment = "Center"
+                           Stretch = "UniformToFill" />
+
+                    <TextBlock Grid.Column = "1"
+                               Text = "{Binding ErrorName, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                               VerticalAlignment = "Center"
+                               FontSize = "16"
+                               Margin = "10,0,0,0" />
+                </Grid>
+
+                <styleClasses:CorneredTextBox Grid.Row = "1"
+                                              Text = "{Binding ErrorMessage, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                              VerticalAlignment = "Stretch"
+                                              VerticalContentAlignment = "Top"
+                                              FontSize = "16"
+                                              Margin = "4, 2"
+                                              TextWrapping = "Wrap"
+                                              Background = "{StaticResource DefaultBackColorBrush}"
+                                              CornerRadiusValue = "4" />
+
+                <styleClasses:CorneredTextBox Grid.Row = "2"
+                                              Text = "{Binding ErrorDescription, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                              VerticalAlignment = "Stretch"
+                                              VerticalContentAlignment = "Top"
+                                              FontSize = "14"
+                                              Margin = "4, 2"
+                                              TextWrapping = "Wrap"
+                                              Background = "{StaticResource DefaultBackColorBrush}"
+                                              CornerRadiusValue = "4" />
+
+                <styleClasses:CorneredTextBox Grid.Row = "3"
+                                              Text = "{Binding ErrorResolution, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                              VerticalAlignment = "Stretch"
+                                              VerticalContentAlignment = "Top"
+                                              FontSize = "14"
+                                              Margin = "4, 2"
+                                              TextWrapping = "Wrap"
+                                              CornerRadiusValue = "4" />
+
+
             </Grid>
-            
-        </Grid>
+        </Border>
     </Grid>
 </styleClasses:BaseWindow>
