--- a/Arcanum.UI/Components/Styles/Specific/DataTemplate/DiagnosticTemplate.xaml
+++ b/Arcanum.UI/Components/Styles/Specific/DataTemplate/DiagnosticTemplate.xaml
@@ -8,7 +8,8 @@
               Margin = "1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width = "24" />
-                <ColumnDefinition Width = "250" />
+                <ColumnDefinition Width = "200" />
+                <ColumnDefinition Width = "150" />
                 <ColumnDefinition Width = "*" />
             </Grid.ColumnDefinitions>
 
@@ -77,7 +78,11 @@
             </TextBlock>
 
             <TextBlock Grid.Column = "2"
-                       Text = "{Binding Descriptor.Message }">
+                       Text = "{Binding Action }">
+            </TextBlock>
+            
+            <TextBlock Grid.Column = "3"
+                       Text = "{Binding Context.ToErrorString }">
             </TextBlock>
         </Grid>
 
