--- a/Arcanum.UI/Components/UserControls/SearchTextBox.xaml
+++ b/Arcanum.UI/Components/UserControls/SearchTextBox.xaml
@@ -1,7 +1,11 @@
 ﻿<UserControl x:Class = "Arcanum.UI.Components.UserControls.SearchTextBox"
              xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses">
+             xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
+             xmlns:converters = "clr-namespace:Arcanum.UI.Components.Converters"
+             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable = "d">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -9,6 +13,7 @@
                 <ResourceDictionary Source = "/Components/Styles/Base/BaseScrollbar.xaml" />
                 <ResourceDictionary Source = "/Components/Styles/Base/BaseButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:BoolToVisibilityConverter x:Key = "BoolToVisibilityConverter" />
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -38,21 +43,36 @@
                                      HorizontalAlignment = "Center"
                                      Background = "Transparent"
                                      DockPanel.Dock = "Right"
-                                     Click="ButtonBase_OnClick">
+                                     Click = "ButtonBase_OnClick">
                 <Image Source = "/Assets/Icons/20x20/Settings20x20.png"
                        Stretch = "None" />
             </styleClasses:BaseButton>
 
             <!-- Text Input -->
-            <TextBox x:Name = "SearchInputTextBox"
-                     BorderThickness = "0"
-                     Background = "Transparent"
-                     VerticalAlignment = "Center"
-                     Margin = "4,0"
-                     MinWidth = "100"
-                     Foreground = "{StaticResource DefaultForeColorBrush}"
-                     CaretBrush = "{StaticResource DefaultForeColorBrush}" 
-                     TextChanged="SearchInputTextBox_OnTextChanged"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width = "*" />
+                </Grid.ColumnDefinitions>
+
+                <Border Background = "Transparent"
+                        Margin = "3,0,3,2"
+                        BorderThickness = "0, 0, 0, 1"
+                        BorderBrush = "{StaticResource DefaultBorderColorBrush}"
+                        Visibility = "{Binding ShowTextUnderline, Converter={StaticResource BoolToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=UserControl}}">
+
+                </Border>
+
+                <TextBox x:Name = "SearchInputTextBox"
+                         BorderThickness = "0"
+                         Background = "Transparent"
+                         VerticalAlignment = "Center"
+                         Margin = "4,0"
+                         MinWidth = "100"
+                         Foreground = "{StaticResource DefaultForeColorBrush}"
+                         CaretBrush = "{StaticResource DefaultForeColorBrush}"
+                         TextChanged = "SearchInputTextBox_OnTextChanged" />
+
+            </Grid>
         </DockPanel>
     </Border>
 
