--- a/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -46,28 +46,28 @@
             <CheckBox Grid.Column = "0"
                       x:Name = "ErrorCheckBox"
                       HorizontalAlignment = "Center"
-                      Checked="CheckBox_OnClick"
-                      Unchecked="CheckBoxUnCheck_OnClick">
+                      Checked = "CheckBox_OnClick"
+                      Unchecked = "CheckBoxUnCheck_OnClick">
                 Error
             </CheckBox>
             <CheckBox Grid.Column = "1"
                       x:Name = "WarningCheckBox"
                       HorizontalAlignment = "Center"
-                      Checked="CheckBox_OnClick"
-                      Unchecked="CheckBoxUnCheck_OnClick">
+                      Checked = "CheckBox_OnClick"
+                      Unchecked = "CheckBoxUnCheck_OnClick">
                 Warning
             </CheckBox>
             <CheckBox Grid.Column = "2"
                       x:Name = "InformationCheckBox"
                       HorizontalAlignment = "Center"
-                      Checked="CheckBox_OnClick"
-                      Unchecked="CheckBoxUnCheck_OnClick">
+                      Checked = "CheckBox_OnClick"
+                      Unchecked = "CheckBoxUnCheck_OnClick">
                 Information
             </CheckBox>
 
             <userControls:SearchTextBox Grid.Column = "3"
                                         x:Name = "SearchTextBox"
-                                        ShowTextUnderline="True">
+                                        ShowTextUnderline = "True">
 
             </userControls:SearchTextBox>
 
@@ -96,20 +96,20 @@
                   Grid.Row = "1"
                   x:Name = "ErrorLogListView"
                   SelectionChanged = "ErrorLogListView_OnSelectionChanged"
-                  Margin="4">
+                  Margin = "4">
         </ListView>
 
         <Border Grid.Column = "2"
                 Grid.Row = "1"
                 Background = "{StaticResource LightBackColorBrush}"
                 CornerRadius = "6"
-                Margin="4">
+                Margin = "4">
             <Grid Margin = "0">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40" />
-                    <RowDefinition Height="35*" />
-                    <RowDefinition Height="35*" />
-                    <RowDefinition Height="30*" />
+                    <RowDefinition Height = "40" />
+                    <RowDefinition Height = "35*" />
+                    <RowDefinition Height = "35*" />
+                    <RowDefinition Height = "30*" />
                     <RowDefinition Height = "30" />
                 </Grid.RowDefinitions>
 
@@ -119,14 +119,75 @@
                         <ColumnDefinition Width = "*" />
                     </Grid.ColumnDefinitions>
 
+                    <Border Grid.Column = "0"
+                            Grid.ColumnSpan = "2"
+                            Opacity = "0.2"
+                            Margin="2"
+                            CornerRadius="15">
+                        
+                        <Border.Style>
+                            <Style TargetType = "Border">
+                                <Setter Property = "Background"
+                                        Value = "{StaticResource DefaultBackColorBrush}" />
+                                <Style.Triggers>
+                                    <DataTrigger
+                                        Binding = "{Binding SelectedSeverity, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                        Value = "Error">
+                                        <Setter Property = "Background"
+                                                Value = "{StaticResource DimErrorRedColorBrush}" />
+                                    </DataTrigger>
+                                    <DataTrigger
+                                        Binding = "{Binding SelectedSeverity, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                        Value = "Warning">
+                                        <Setter Property = "Background"
+                                                Value = "{StaticResource DimWarningYellowColorBrush}" />
+                                    </DataTrigger>
+                                    <DataTrigger
+                                        Binding = "{Binding SelectedSeverity, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                        Value = "Information">
+                                        <Setter Property = "Background"
+                                                Value = "{StaticResource DimInformationBlueColorBrush}" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
+                    </Border>
+
                     <Image Grid.Column = "0"
-                           Source = "/Assets/Icons/40x40/DangerCircle40x40.png"
                            Width = "35"
                            Height = "35"
                            Margin = "0,0,0,0"
                            VerticalAlignment = "Center"
                            HorizontalAlignment = "Center"
-                           Stretch = "UniformToFill" />
+                           Stretch = "UniformToFill">
+
+                        <Image.Style>
+                            <Style TargetType = "Image">
+                                <Setter Property = "Source"
+                                        Value = "pack://application:,,,/Assets/Icons/16x16/InfoCircle16x16.png" />
+                                <Style.Triggers>
+                                    <DataTrigger
+                                        Binding = "{Binding SelectedSeverity, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                        Value = "Error">
+                                        <Setter Property = "Source"
+                                                Value = "pack://application:,,,/Assets/Icons/40x40/CloseCircle40x40.png" />
+                                    </DataTrigger>
+                                    <DataTrigger
+                                        Binding = "{Binding SelectedSeverity, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                        Value = "Warning">
+                                        <Setter Property = "Source"
+                                                Value = "pack://application:,,,/Assets/Icons/40x40/DangerCircle40x40.png" />
+                                    </DataTrigger>
+                                    <DataTrigger
+                                        Binding = "{Binding SelectedSeverity, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                        Value = "Information">
+                                        <Setter Property = "Source"
+                                                Value = "pack://application:,,,/Assets/Icons/40x40/InfoCircle40x40.png" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Image.Style>
+                    </Image>
 
                     <TextBlock Grid.Column = "1"
                                Text = "{Binding ErrorName, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
@@ -143,7 +204,8 @@
                                               Margin = "4, 2"
                                               TextWrapping = "Wrap"
                                               Background = "{StaticResource DefaultBackColorBrush}"
-                                              CornerRadiusValue = "4" />
+                                              CornerRadiusValue = "4"
+                                              IsReadOnly = "True" />
 
                 <styleClasses:CorneredTextBox Grid.Row = "2"
                                               Text = "{Binding ErrorDescription, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
@@ -153,7 +215,8 @@
                                               Margin = "4, 2"
                                               TextWrapping = "Wrap"
                                               Background = "{StaticResource DefaultBackColorBrush}"
-                                              CornerRadiusValue = "4" />
+                                              CornerRadiusValue = "4"
+                                              IsReadOnly = "True" />
 
                 <styleClasses:CorneredTextBox Grid.Row = "3"
                                               Text = "{Binding ErrorResolution, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
@@ -162,8 +225,29 @@
                                               FontSize = "14"
                                               Margin = "4, 2"
                                               TextWrapping = "Wrap"
-                                              CornerRadiusValue = "4" />
+                                              CornerRadiusValue = "4"
+                                              IsReadOnly = "True" />
 
+                <StackPanel Grid.Row = "4"
+                            Margin = "4"
+                            HorizontalAlignment = "Right"
+                            Orientation = "Horizontal">
+                    <styleClasses:BaseButton Click = "ButtonBase_OnClick"
+                                             ToolTip = "Open folder of selected faulty file">
+                        <Image Source = "../../../Assets/Icons/20x20/FolderOpen20x20.png"
+                               Width = "20"
+                               Height = "20">
+                        </Image>
+                    </styleClasses:BaseButton>
+                    <styleClasses:BaseButton Margin = "4, 0, 0, 0"
+                                             Click = "OpenFileAtPos_OnClick"
+                                             ToolTip = "Open file at error position">
+                        <Image Source = "../../../Assets/Icons/20x20/File20x20.png"
+                               Width = "20"
+                               Height = "20">
+                        </Image>
+                    </styleClasses:BaseButton>
+                </StackPanel>
 
             </Grid>
         </Border>
