--- a/Arcanum.UI/Components/Styles/Base/BaseButton.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseButton.xaml
@@ -8,7 +8,7 @@
     </ResourceDictionary.MergedDictionaries>
 
 
-    <Style TargetType="styleClasses:BaseButton">
+    <Style TargetType = "styleClasses:BaseButton">
         <Setter Property = "Background"
                 Value = "{StaticResource DefaultBackColorBrush}" />
         <Setter Property = "Foreground"
@@ -45,14 +45,23 @@
                             <Setter TargetName = "border"
                                     Property = "Background"
                                     Value = "{Binding Path=HoverBackground, RelativeSource={RelativeSource TemplatedParent}}" />
+                        </Trigger>
+
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property = "IsKeyboardFocused"
+                                           Value = "True" />
+                                <Condition Property = "IsMouseOver"
+                                           Value = "False" />
+                            </MultiTrigger.Conditions>
                             <Setter TargetName = "border"
                                     Property = "BorderBrush"
                                     Value = "{StaticResource BlueSelectionBackColorBrush}" />
-                        </Trigger>
-                        <Trigger Property = "IsPressed"
-                                 Value = "True">
-                            <!-- We do nothing -->
-                        </Trigger>
+                            <Setter TargetName = "border"
+                                    Property = "BorderThickness"
+                                    Value = "2" />
+                        </MultiTrigger>
+
                         <Trigger Property = "IsEnabled"
                                  Value = "False">
                             <Setter Property = "Foreground"
